# OCRTools

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
Lange_QA_Internal_Medicine_4Ed/: Lange_QA_Internal_Medicine_4Ed.md
ocr/: KerasOCR.py  PaddleOCR.py  TrOCR.py  clean_glm_ocr.py  clean_markdown_tool.py  dockling_images.py  dockling_text.py  easy_ocr.py  gemma3_ocr.py  glm_ocr.py  mistral_ocr.py  mistral_ocr_image.py  mistral_ocr_pdf.py  paddle_ocrvl.py  sl_mdviewer.py  unique_words.py
pdf2md/: mistral_ocr.py  olma_ocr.py
